<resources>
    <string name="app_name">BizBook</string>
    <string name="action_settings">Settings</string>
    <string name="login">Đăng nhập</string>
    <string name="login_btn">Tham gia với MCBooks</string>
    <string name="search_book">Tìm kiếm sách</string>
    <string name="search_gift">Tìm kiếm quà tặng</string>
    <string name="book_interest">Sách liên quan</string>
    <string name="charts">Bảng xếp hạng</string>
    <string name="fanpage">Fanpage</string>
    <string name="setting">Cài đặt</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="user_manual">Hướng dẫn sử dụng</string>
    <string name="feedback">Góp ý</string>
    <string name="legal">Pháp lý</string>
    <string name="support">Hỗ trợ</string>
    <string name="sign_out">Đăng xuất</string>
    <string name="full_name">Họ và tên</string>
    <string name="date_of_birth">Ngày sinh</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="sex">Giới tính</string>
    <string name="email">Email</string>
    <string name="city">Tỉnh/Thành phố</string>
    <string name="country">Quận/Huyện</string>
    <string name="address">Địa chỉ</string>
    <string name="btn_save_profile">Lưu</string>
    <string name="account_information">Thông tin tài khoản</string>
    <string name="delete_book">Xóa sách</string>
    <string name="delete_gift">Xóa quà tặng</string>
    <string name="share_book">Chia sẻ</string>
    <string name="my_book">Sách của tôi</string>
    <string name="general_information">Thông tin chung</string>
    <string name="lesson">Bài học</string>
    <string name="exercise">Bài tập</string>
    <string name="training">Luyện tập</string>
    <string name="general">Tổng quát</string>
    <string name="show_more">Xem thêm</string>
    <string name="show_less">Thu gọn</string>
    <string name="information_book">Thông tin chung</string>
    <string name="community_book">Cộng đồng sách</string>
    <string name="author">Tác giả</string>
    <string name="programs_study">Chương trình học</string>
    <string name="delete_book_dialog">Bạn có chắc chắn muốn xoá Sách \" %1$s \" ?</string>
    <string name="delete_gift_dialog">Bạn có chắc chắn muốn xoá quà tặng này?</string>
    <string name="add_gift_error"> Mã quà tặng không chính xác vui lòng nhập lại!</string>
    <string name="enter_gift_code">Nhập mã quà tặng</string>
    <string name="cancel">Hủy</string>
    <string name="delete">Xóa</string>
    <string name="gift">Quà tặng</string>
    <string name="continue_read">Đọc tiếp</string>
    <string name="detail">Chi tiết</string>
    <string name="camera">Máy ảnh</string>
    <string name="gallery">Thư viện</string>
    <string name="select_value">Chọn giá trị</string>
    <string name="done">Hoàn thành</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="gift_code">Mã quà tặng</string>
    <string name="accept">Chấp nhận</string>
    <string name="qr_code">Scan QR Code</string>
    <string name="barcode">Nhập Barcode 8935… ngay phía trên phần giá tiền</string>
    <string name="qr_code_hint">Di chuyển Camera trước QR Code được in phía sau mỗi cuốn sách MCBooks</string>
    <string name="search_lesson">Tìm kiếm bài học</string>
    <string name="empty_gift_code">Bạn cần nhập mã quà tặng!</string>
    <string name="download">Tải về</string>
    <string name="add_book_success">Bạn đã thêm Sách \" %1$s \" thành công!</string>
    <string name="add_gift_success">Chúc mừng bạn đã được tặng phần quà dành cho \" %1$s \"</string>
    <string name="default_error">Có lỗi xảy ra, vui lòng thử lại</string>
    <string name="other_gender">Giới tính khác</string>
    <string name="see_now">Xem ngay</string>
    <string name="price">Giá: </string>
    <string name="related_book">Sách liên quan</string>
    <string name="buy_book">Mua sách</string>
    <string name="statistic_daily">Tiến trình học hàng ngày của bạn</string>
    <string name="statistic">Theo dõi tiến trình học tập</string>
    <string name="study_time">Thời gian học:</string>
    <string name="sumary_point">Tổng điểm:</string>
    <string name="finished">Hoàn thành:</string>
    <string name="result">Đáp án:</string>
    <string name="check_result">Kiểm tra đáp án</string>
    <string name="answer_result">Lời giải</string>
    <string name="information">Giới thiệu</string>
    <string name="mcbook_phone">Tổng đài MCBooks</string>
    <string name="mcbook_phone_number">0901 701 202</string>
    <string name="send_sms_mcbook">Gửi tin nhắn cho MCBooks</string>
    <string name="faq">FAQ</string>
    <string name="empty_single_choose">Bạn chưa chọn đáp án</string>
    <string name="page">Trang </string>
    <string name="day">ngày</string>
    <string name="score">Điểm:</string>
    <string name="do_subject_again"><u>Làm lại bài tập</u></string>
    <string name="scan_qr_lesson">Di chuyển camera tới trước mã QR Code của phần học trong cuốn sách.</string>
    <string name="reset_question_success">Bài tập đã được làm mới lại</string>
    <string name="reset_question_content">Bạn chắc chắn muốn làm lại bài tập?</string>
    <string name="ok">Đồng ý</string>
    <string name="first_lesson">Bạn đang ở đầu danh sách bài học</string>
    <string name="last_lesson">Bạn đang ở cuối danh sách bài học</string>
    <string name="first_question">Bạn đang ở đầu danh sách bài tập</string>
    <string name="last_question">Bạn đang ở cuối danh sách bài tập</string>
    <string name="first_exam">Bạn đang ở đầu danh sách đề thi</string>
    <string name="last_exam">Bạn đang ở cuối danh sách đề thi</string>
    <string name="wrong_qr_lesson">Bài học không tồn tại. Vui lòng kiểm tra lại mã code</string>
    <string name="wrong_qr_book">Cuốn sách này không tồn tại. Vui lòng kiểm tra lại mã code.</string>
    <string name="empty_subject">Hiện tại đang không có bài tập ở trong sách</string>
    <string name="empty_lesson">Hiện tại đang không có bài học ở trong sách</string>
    <string name="empty_matching">Cần nối tất cả đáp án với nhau để kiểm tra</string>
    <string name="result_1">Đáp án</string>
    <string name="logout">Đăng xuất</string>
    <string name="logout_confirm">Bạn chắc chắn muốn đăng xuất?</string>
    <string name="download_success">Tải file thành công</string>
    <string name="notice">Thông báo!</string>
    <string name="notice_content">Ứng dụng MCBooks vừa trải qua giai đoạn nâng cấp version mới, nên có thể sẽ xảy ra việc mất dữ liệu cũ của bạn. Để có các trải nghiệm tuyệt vời hơn và tiếp tục học tập, vui lòng scan lại mã sách nếu bạn không thấy các sách trước đó.</string>
    <string name="reset_matching">Xóa tất cả</string>
    <string name="no">Không</string>
    <string name="yes">Có</string>
    <string name="error_phonenumber">Số điện thoại không chính xác</string>
    <string name="error_fullname">Không được bỏ trống họ và tên</string>
    <string name="error_empty_phonenumber">Không được bỏ trống số điện thoại</string>
    <string name="update_info_success">Cập nhật thông tin thành công</string>
    <string name="repeat">Làm lại</string>
    <string name="codeIsNull">Mã sách trống. Vui lòng nhập mã để nhận sách trên app.</string>
    <string name="bookExist">Cuốn sách đã tồn tại trong danh sách sách của bạn.</string>
    <string name="bookDoesNotActive">Cuốn sách này đang bị vô hiệu</string>
    <string name="bookDoesNotExist">Sách không tồn tại. Vui lòng kiểm tra lại mã sách đã nhập.</string>
    <string name="codeDoesNotExist">Mã sách không tồn tại. Vui lòng kiểm tra lại mã sách đã nhập.</string>
    <string name="recordNotFound">Bản ghi không tồn tại</string>
    <string name="cantFetch">Không thể tải dữ liệu cho mã sách này.</string>
    <string name="paramInvalid">Dữ liệu không hợp lệ</string>
    <string name="cantIdentity">ID không hợp lệ</string>
    <string name="somethingWentWrong">Lỗi không xác định</string>
    <string name="giftCodeRequired">Bạn cần nhập mã quà tặng</string>
    <string name="giftCodeNotFound">Nhập sai mã quà tặng, vui lòng kiểm tra lại mã code.</string>
    <string name="giftCodeUsed">Mã quà tặng đã được sử dụng. Mã quà tặng chỉ được redeem 1 lần.</string>
    <string name="promotionHasReceived">Bạn đã nhận quà tặng cho mã giftcode này rồi</string>
    <string name="nullLesson">Không tìm thấy bài học </string>
    <string name="error_img">Đã xảy ra lỗi khi tải ảnh này, vui lòng chọn ảnh khác</string>
    <string name="go_study">Học nhé!</string>
    <string name="error_dowload">Đã có lỗi trong quá trình download, vui lòng thử lại</string>
    <string name="recordBookNotFound">Cuốn sách không tồn tại. Vui lòng kiểm tra lại mã code.</string>
    <string name="recordDetailMyBookNotFound">Cuốn sách không có trong danh sách Sách của tôi.</string>
    <string name="recordQuestionNotFound">Câu hỏi không tồn tại trong Danh sách câu hỏi</string>
    <string name="recordChapterNotFound">Phần học không tồn tại.</string>
    <string name="recordLessonNotFound">Bài học không tồn tại. Vui lòng kiểm tra lại mã code.</string>
    <string name="no_internet">Không có kết nối mạng</string>
    <string name="close">Đóng</string>
    <string name="timeout">Máy chủ hiện không có phản hồi.</string>
    <string name="serverError">Hệ thống đang bảo trì, Quý khách vui lòng quay lại sau</string>
    <string name="invalid_qrcode_empty">Mã sách trống. Vui lòng nhập mã để nhận sách trên app.</string>
    <string name="invalid_qrcode">Mã sách không tồn tại. Vui lòng kiểm tra lại mã sách đã nhập.</string>
    <string name="member">Thành viên</string>
    <string name="book">Sách</string>
    <string name="points">điểm</string>
    <string name="unfollow">Hủy theo dõi</string>
    <string name="follow">Theo dõi</string>
    <string name="list_friend">Danh sách bạn bè</string>
    <string name="filter_member">Tùy chọn lọc thành viên</string>
    <string name="filter_book">Tùy chọn lọc sách</string>
    <string name="all">Tất cả</string>
    <string name="friend">Bạn bè</string>
    <string name="time">Thời gian</string>
    <string name="days">Ngày</string>
    <string name="month">Tháng</string>
    <string name="week">Tuần</string>
    <string name="year">Năm</string>
    <string name="continue_1">Tiếp tục</string>
    <string name="catalog">Danh mục</string>
    <string name="introduce">Giới thiệu</string>
    <string name="class_exam">Lớp:</string>
    <string name="subjects">Môn:</string>
    <string name="thematic">Chuyên đề:</string>
    <string name="level_exam">Mức độ: </string>
    <string name="times">Thời gian:</string>
    <string name="number_of_exams">Số lần thi:</string>
    <string name="number_of_questions">Số lượng câu hỏi:</string>
    <string name="history">Lịch sử</string>
    <string name="exam">Vào thi</string>
    <string name="no_note_answer">Câu hỏi này hiện không có lời giải</string>
    <string name="empty_media_url">Không thể tải được nội dung. Vui lòng thử lại sau</string>
    <string name="list_question">Danh sách câu hỏi</string>
    <string name="empty_exam">Không có câu hỏi trong đề thi</string>
    <string name="list_exam_question">Danh sách câu hỏi đề thi</string>
    <string name="text_detail">Chi tiết</string>
    <string name="text_result_exam">Chúc mừng bạn đã hoàn thành bài thi, bạn đã làm đúng %1$s câu và số điểm bạn đã đạt được là</string>
    <string name="text_result_exam_low">Bạn đã hoàn thành bài thi, bạn đã làm đúng %1$s câu và số điểm bạn đã đạt được là</string>
    <string name="result_exam">Kết quả</string>
    <string name="finish_exam">Nộp bài</string>
    <string name="finish_exam_confirm">Bạn có chắc chắn muốn nộp bài thi ngay bây giờ chứ?</string>
    <string name="do_training_1">Nghe hội thoại</string>
    <string name="do_training_2">Thực hành</string>
    <string name="do_training_3">Ghi âm</string>
    <string name="choose_role">Chọn vai trò trong đoạn hội thoại</string>
    <string name="info_record">Chưa có bài luyện tập nào</string>
</resources>