<?xml version="1.0" encoding="utf-8"?>
<com.bon.customview.scrollview.ExtScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_layout"
        android:orientation="vertical"
        android:padding="@dimen/padding_layout">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/padding_layout">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivAvatar"
                android:layout_width="@dimen/avatar_large"
                android:layout_height="@dimen/avatar_large"
                android:src="@drawable/ic_default_avatar" />

            <ImageView
                android:id="@+id/ivChangeAvatar"
                style="@style/iconMedium"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_margin="@dimen/padding_layout"
                android:background="@drawable/bg_null_gray_selector"
                app:srcCompat="@drawable/ic_photo_avatar" />
        </FrameLayout>

        <com.mc.customizes.edittexts.TextInputApp
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_layout"
            android:layout_marginTop="@dimen/padding_layout"
            android:imeOptions="actionNext"
            android:inputType="text"
            app:textInputAppLabel="@string/full_name" />

        <com.mc.customizes.edittexts.TextInputApp
            android:id="@+id/etBirthDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_layout"
            android:background="@drawable/bg_null_gray_selector"
            android:imeOptions="actionNext"
            android:inputType="text"
            app:textInputAppEnable="false"
            app:textInputAppIcon="@drawable/ic_arrow_down"
            app:textInputAppLabel="@string/date_of_birth" />

        <com.mc.customizes.edittexts.TextInputApp
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_layout"
            android:imeOptions="actionNext"
            android:inputType="phone"
            app:textInputAppLabel="@string/phone_number" />

        <com.mc.customizes.edittexts.TextInputApp
            android:id="@+id/etGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_layout"
            android:background="@drawable/bg_null_gray_selector"
            android:imeOptions="actionNext"
            android:inputType="text"
            app:textInputAppEnable="false"
            app:textInputAppIcon="@drawable/ic_arrow_down"
            app:textInputAppLabel="@string/sex" />

        <com.mc.customizes.edittexts.TextInputApp
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_layout"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            app:textInputAppLabel="@string/email" />

        <com.mc.customizes.edittexts.TextInputApp
            android:id="@+id/etCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_layout"
            android:background="@drawable/bg_null_gray_selector"
            android:imeOptions="actionNext"
            android:inputType="text"
            app:textInputAppEnable="false"
            app:textInputAppIcon="@drawable/ic_arrow_down"
            app:textInputAppLabel="@string/city" />

        <com.mc.customizes.edittexts.TextInputApp
            android:id="@+id/etDistrict"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_layout"
            android:background="@drawable/bg_null_gray_selector"
            android:imeOptions="actionNext"
            android:inputType="text"
            app:textInputAppEnable="false"
            app:textInputAppIcon="@drawable/ic_arrow_down"
            app:textInputAppLabel="@string/country" />

        <com.mc.customizes.edittexts.TextInputApp
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_layout"
            android:imeOptions="actionDone"
            android:inputType="text"
            app:textInputAppLabel="@string/address" />

        <com.bon.customview.button.ExtButton
            android:id="@+id/btnSave"
            style="@style/StyleContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_layout"
            android:background="@drawable/bg_btn_save_profile"
            android:text="@string/btn_save_profile"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold"
            app:buttonFontAssetName="@string/font_bold" />

    </LinearLayout>
</com.bon.customview.scrollview.ExtScrollView>