<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    android:orientation="vertical">

    <com.bon.customview.scrollview.ExtScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/header_tab_more"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/padding_layout">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="@dimen/padding_layout">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/imgAvartar"
                        android:layout_width="@dimen/avatar_normal"
                        android:layout_height="@dimen/avatar_normal"
                        android:background="@drawable/bg_border_avatar"
                        android:padding="@dimen/avatar_border"
                        android:src="@drawable/ic_default_avatar" />

                    <com.bon.customview.textview.ExtTextView
                        android:id="@+id/txtName"
                        style="@style/StyleMenu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/padding_layout"
                        android:text="Nguyen Thu Trang"
                        android:textColor="@color/colorDarkBlue"
                        android:textSize="@dimen/text_super_large" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/ivEdit"
                    android:layout_width="@dimen/icon_medium"
                    android:layout_height="@dimen/icon_medium"
                    android:layout_marginRight="@dimen/padding_layout"
                    android:background="@drawable/bg_null_gray_selector"
                    app:srcCompat="@drawable/ic_border_color" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/padding_layout">

                <com.mc.customizes.menus.ItemMenu
                    android:id="@+id/llCharts"
                    style="@style/tabMoreLinear"
                    app:menuItemIcon="@drawable/ic_leader_broad"
                    app:menuItemText="@string/charts" />

                <com.mc.customizes.menus.ItemMenu
                    android:id="@+id/llSetting"
                    style="@style/tabMoreLinear"
                    app:menuItemIcon="@drawable/ic_settings"
                    app:menuItemText="@string/setting" />

                <com.mc.customizes.menus.ItemMenu
                    android:id="@+id/llChangePassword"
                    style="@style/tabMoreLinear"
                    app:menuItemIcon="@drawable/ic_passwork"
                    app:menuItemText="@string/change_password" />

                <com.mc.customizes.menus.ItemMenu
                    android:id="@+id/llUsermanual"
                    style="@style/tabMoreLinear"
                    app:menuItemIcon="@drawable/ic_guide"
                    app:menuItemText="@string/user_manual" />

                <com.mc.customizes.menus.ItemMenu
                    android:id="@+id/llSupport"
                    style="@style/tabMoreLinear"
                    app:menuItemIcon="@drawable/ic_email"
                    app:menuItemText="@string/support" />

                <com.mc.customizes.menus.ItemMenu
                    android:id="@+id/llLegal"
                    style="@style/tabMoreLinear"
                    app:menuItemIcon="@drawable/ic_policy"
                    app:menuItemText="@string/legal" />

                <com.mc.customizes.menus.ItemMenu
                    android:id="@+id/llInformation"
                    style="@style/tabMoreLinear"
                    app:menuItemIcon="@drawable/ic_infomation"
                    app:menuItemText="@string/information" />

                <com.mc.customizes.menus.ItemMenu
                    android:id="@+id/llSignout"
                    style="@style/tabMoreLinear"
                    app:menuItemIcon="@drawable/ic_logout"
                    app:menuItemText="@string/sign_out" />
            </LinearLayout>
        </LinearLayout>
    </com.bon.customview.scrollview.ExtScrollView>
</LinearLayout>
